--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* variables */
+
 :root {
     --dark-cyan: hsl(185, 75%, 39%);
     --dark-blue: hsl(229, 23%, 23%);
@@ -86,4 +87,13 @@ span {
     display: grid;
     grid-template-columns: auto auto auto;
     padding: 30px;
+}
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
 }
